crates/config/tests/snapshots/quoted_string_escape_only.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-string-escape-only

## Input

```mical
a "\n\t\\"

```

## JSON

```json
{
  "a": "\n\t\\"
}
```

vim:ft=markdown
