crates/config/tests/snapshots/quoted_string_space_content.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-string-space-content

## Input

```mical
a " "
b '  '

```

## JSON

```json
{
  "a": " ",
  "b": "  "
}
```

vim:ft=markdown
