crates/config/tests/snapshots/quoted_string_unclosed_value.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-string-unclosed-value

## Input

```mical
a "unclosed
b value

```

## Parser Error

```
11..11: missing closing quote

```

## JSON

```json
{
  "a": "unclosed",
  "b": "value"
}
```

vim:ft=markdown
