crates/config/tests/snapshots/shebang.snap
---
source: crates/config/tests/snapshots.rs
---
# shebang

## Input

```mical
#!/usr/bin/env mical
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
