crates/config/tests/snapshots/shebang_no_trailing_newline.snap
---
source: crates/config/tests/snapshots.rs
---
# shebang-no-trailing-newline

## Input

```mical
#!/usr/bin/env mical
```

## JSON

```json
{}
```

vim:ft=markdown
