crates/config/tests/snapshots/shebang_only.snap
---
source: crates/config/tests/snapshots.rs
---
# shebang-only

## Input

```mical
#!/usr/bin/env mical

```

## JSON

```json
{}
```

vim:ft=markdown
