crates/config/tests/snapshots/shebang_with_comment.snap
---
source: crates/config/tests/snapshots.rs
---
# shebang-with-comment

## Input

```mical
#!/usr/bin/env mical
# comment
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
