crates/config/tests/snapshots/tab_indent.snap
---
source: crates/config/tests/snapshots.rs
---
# tab-indent

## Input

```mical
a 1
	b 2
c 3

```

## Parser Error

```
4..4: tab indent is not allowed, skipping this line

```

## JSON

```json
{
  "a": 1,
  "c": 3
}
```

vim:ft=markdown
